# prime-rl

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile.cuda  Dockerfile.gb200  Dockerfile.gb200-runtime  Dockerfile.gb200-wheels  GPUS.md  HANDOFF.md  README.md  TRIALS.md  lora-sync-incident-log-2026-07-01.md  nccl-fix.md  prod.toml  pyproject.toml  vllm-syncer.md
.github/workflows/: build_image.yaml  cpu_tests.yaml  devx_tag.yaml  docker-push.yaml  gpu_tests.yaml  nightly_tests.yaml  release-gb200.yaml  release.yaml  style.yaml  tag-and-release.yaml
.handoffs/: omni_math2_baseline_launch_notes.md
benchmarks/baselines/: benchmark-1xa6000-Qwen--Qwen3-0.6B-rl-full-1gpu-Recompute-flash_attention_2-65536-cp1-ep1.json  benchmark-4xa6000-Qwen--Qwen3-0.6B-rl-full-4gpu-Recompute-flash_attention_2-65536-cp1-ep1.json
benchmarks/scripts/: run_single_benchmark.py
configs/: gemma4_moe_smoke.toml  gemma4_native_smoke.toml
configs/acereason_math/: stage1.toml  stage2.toml
configs/alphabet_sort/: rl.toml
configs/baselines/: PERFECTIBLE_THROUGHPUT_BOTEC.md  README.md  base_text_chat_template.jinja  gpqa_mcq_gemma4_local.toml  gpqa_openended_gemma4_local.toml  gpqa_science_mcq_prompt_pack.yaml  gpqa_science_prompt_pack.yaml  gsm8k_gemma4_local.toml  omni_math2_hybridmath_local.toml  omni_math2_perfectible_gemma4_26b_a4b_fp8kv.toml  omni_math2_perfectible_gemma4_e4b_fp8kv.toml  omni_math2_perfectible_olmo3_fp8kv.toml  omni_math2_perfectible_rnj1_fp8kv.toml  omni_math2_prompt_pack_trinity_nothink.yaml  zebra_puzzles_v2_eval_canonical_gemma4_local.toml  zebra_puzzles_v2_eval_nl_varied_gemma4_local.toml
configs/calibration/: gpqa_debate_12step_bs512_g16_1t7i_kvsmoke.toml  gpqa_debate_12step_bs512_g32_2t6i_kvsmoke.toml  gpqa_debate_5step.toml  gpqa_debate_5step_bs512_g16.toml  gpqa_openended_debate_12step_bs512_g16_1t7i_pcd4_final_kvsmoke.toml  gpqa_openended_debate_12step_bs512_g16_1t7i_pcd4_kvsmoke.toml  gpqa_openended_debate_12step_bs512_g16_1t7i_sequential4_kvsmoke.toml  gpqa_openended_debate_20step_bs512_g16_seq4_fs_sync_ab.toml  gpqa_openended_debate_20step_bs512_g16_seq4_nccl_sync_ab.toml  gpqa_openended_debate_50step_bs512_g16_4t12i_simul_r64.toml  gpqa_single_shot_eval_after_ckpt.toml  qwen15b_math_fs_lora_storm_2t2i.toml  topology_e0_lag3_3t12i.toml  topology_e2_lag3_4t11i.toml
configs/debate/: base.toml  gen.py  grader-deepseek.txt
configs/debug/: env_server.toml  orch.toml  rl_lora_smoke.toml  teacher_rollout_hard_distill_smoke.toml
configs/deepscaler/: stage1.toml  stage2.toml  stage3.toml
configs/elastic/: rl.toml
configs/env_mix/: env_mix.toml
configs/evals/: rung6_suite.toml
configs/gemma4/: rl_dense.toml  rl_moe.toml  sft_dense.toml  sft_moe.toml  sft_qwen3.toml  sft_qwen35.toml
configs/general_agent/: rl_qwen3_0p6b.toml  rl_qwen3_30b_a3b.toml  rl_qwen3_4b.toml
configs/glm5_8node_fake/: rl.toml
configs/glm5_disagg_inference/: inference.toml
configs/gpqa_consultancy/: rl.toml
configs/gpqa_debate/: rl_external_opponent.toml  rl_selfplay.toml
configs/gpqa_rlvr/: rl.toml
configs/gsm8k/: rl.toml
configs/hendrycks_math/: glm5_rl_16train_2infer.toml  glm5_rl_16train_2infer_index_cache.toml  rl.toml  sanity.toml
configs/isambard/: rl_2node_inalloc.toml  rl_debate_smoke_keep.toml  rl_qwen35moe_2node_inalloc.toml
configs/length_shaping_ablation/: base.toml  efficiency.toml  gr3.toml  grpo.toml
configs/math_group/: rl.toml
configs/math_python/: math_python.toml
configs/multi_reverse_text/: rl.toml
configs/multimodal/: rl_color_codeword.toml  rl_color_codeword_feat_renderer.toml  rl_color_codeword_test.toml
configs/nemotron_4node/: rl.toml
configs/nemotron_debug/: rl.toml  sft_cp.toml
configs/omni_math2/: rl_olmo3_canary_dppo_kl_sequence_default.toml  rl_olmo3_canary_dppo_kl_token_default.toml  rl_olmo3_canary_dppo_kl_token_maxrl.toml  rl_olmo3_canary_is_reinforce_kl_token_maxrl.toml  rl_olmo3_canary_reinforce_half_kl_token.toml  rl_olmo3_dpo_default_20step.toml  rl_olmo3_dpo_default_8node_28i4t_bs512_fsasync4.toml  rl_olmo3_dpo_default_8node_28i4t_compile_fsasync2_refill_bs512_tis2.toml  rl_olmo3_dpo_default_8node_28i4t_compile_fsasync4.toml  rl_olmo3_dpo_default_8node_28i4t_compile_fsasync4_refill.toml  rl_olmo3_dpo_default_pipelinerl_speed.toml  rl_olmo3_dpo_maxrl_20step.toml  rl_olmo3_dpo_maxrl_pipelinerl_speed.toml  rl_olmo3_instruct_dpo_perfectible340_12i4t_sync_diag.toml
configs/sft/: baseline.toml  isambard_abl_bf16reduce.toml  isambard_abl_reshard_only.toml  isambard_allin_test.toml  isambard_smoke.toml  (+33 more)
docs/: advanced.md  algorithms.md  async.md  configuration.md  development.md  disaggregated-inference.md  entrypoints.md  gb200-images.md  gb200-runbook.md  index.md  inference.md  launch.md  logging.md  memory_usage.md  metrics.md  mint.json  multi_run_manager.md  multimodal.md  on_policy_distillation.md  overview.md  platform-monitoring.md  rl-config-schema.json  scaling.md  slurm.md  training.md  transcript-analysis.md  troubleshooting.md
scripts/: analyze_wandb_production_gate.py  audit_sampling_kernel_goal_pt2.py  bench_triton_k_tail_after_flashinfer.py  bench_vllm_flashinfer_sampler_integration.py  bench_vllm_sampled_logprob_fastpath.py  botec_perfectible.py  check_infer_health.sh  docker-arm64-post-install.sh  docker-entrypoint.sh  export_config_schema.py  fix-flash-attn-cute.sh  generate_config_docs.py  index_cache_bench.py  install.sh  install_deep_gemm.sh  install_evals.sh  install_nixl_from_source.sh  install_router_aarch64.sh  install_vllm_router.sh  mini_moe.py  parity_classify.py  plot_tps.sh  preflight_lora_smoke.py  probe_prime_flashinfer_sampler_contract_sweep.py  probe_prime_flashinfer_sampler_patch.py  prune_ckpt_training_state.py  run_perfectible_chain.sh  slurm_tmux.sh  smoke_eval_sft.py  smoke_eval_sft_prompts.json  summarize_vllm_throughput.py  sync-prime-rl-env.sh  tmux.sh
tests/: utils.py
tmp/: analyze_traces.py  compile_drill.py  compile_overlap.py  cpu_dispatch_analysis.py  cpu_dispatch_summary.json  dispatch_lag.py  drill_other.py  kernel_diff.py  test_mmlu_retry.py  trace_audit.py
(+552 files in other folders)
