[project]
name = "prime-rl"
version = "0.4.0"
description = "Async RL Training at Scale"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "prime-rl-configs",
    "beartype>=0.21.0",
    "datasets>=4.0.0",
    "jaxtyping>=0.3.2",
    "liger-kernel>=0.5.10",
    "loguru>=0.7.3",
    "pyarrow>=21.0.0",
    "numpy>=2.2.6",
    "torch>=2.9.0",
    "torchvision",
    "torchaudio",
    "torchdata>=0.11.0",
    "transformers",
    "vllm>=0.20.2",
    "wandb>=0.26.1",
    "ring-flash-attn>=0.1.8",
    "prime>=0.6.4",
    "pyzmq>=27.1.0",
    "aiolimiter>=1.2.1",
    "tenacity>=8.2.0",
    "openai>=1.106.1",
    "anthropic>=0.45.0",
    "rich>=14.0.0",
    "setproctitle>=1.3.0",
    "uvloop>=0.21.0",
    "torchtitan",
    "verifiers",
    "renderers",
    "dion",
    "tilelang>=0.1.8",
    "flash-linear-attention",
    "nvidia-ml-py>=12.575.51",
]

[project.scripts]
rl = "prime_rl.entrypoints.rl:main"
sft = "prime_rl.entrypoints.sft:main"
inference = "prime_rl.entrypoints.inference:main"
trainer = "prime_rl.trainer.rl.train:main"
orchestrator = "prime_rl.orchestrator.orchestrator:main"
env-server = "prime_rl.orchestrator.env_server.env_server:main"
baseline-eval = "prime_rl.baselines.cli:main"

[project.entry-points."vllm.general_plugins"]
prime_rl = "prime_rl.inference.patches:transformers_v5_compat"

[project.optional-dependencies]
flash-attn = [
    "flash-attn ; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]
flash-attn-3 = ["flash_attn_3"]

flash-attn-cute = [
    "flash-attn-4",
]
envs = [
    "reverse-text",
    "alphabet-sort",
    "wiki-search",
    "math-python",
    "math-env",
    "code-env",
    "science-env",
    "logic-env",
    "color-codeword",
    "math500",
    "aime2024",
    "aime2025",
    "mini_swe_agent_plus",
    "deepdive"
]
disagg = [
    "deep-ep ; platform_machine == 'x86_64'",
    "deep-gemm ; platform_machine == 'x86_64'",
    "nixl",
    "nixl-cu12 ; platform_machine == 'x86_64'",
    "vllm-router ; platform_machine == 'x86_64'",
]
gpt-oss = [
    "kernels",
]
quack = [
    "quack-kernels>=0.3.3",
]
all = [
    "prime-rl[flash-attn]",
    "prime-rl[disagg]",
    "prime-rl[quack]",
    "prime-rl[flash-attn-3]",
    "prime-rl[flash-attn-cute]",
]

[dependency-groups]
mamba-ssm = [
    "mamba-ssm>=2.3.0",
]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]


[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
exclude-newer = "7 days"
preview = true
no-build-isolation-package = ["flash-attn"]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
# Override torch's pinned cuDNN to fix Conv3d performance regression (torch 2.9 + cuDNN 9.8-9.14)
# See: https://github.com/pytorch/pytorch/issues/166122
override-dependencies = [
    "nvidia-cudnn-cu13>=9.15",
    "nvidia-cutlass-dsl>=4.4.2",
    "transformers>=5.1.0.dev0",
]

[tool.uv.exclude-newer-package]
# we want latest vllm, remove next patch
vllm = false
flash_attn_3 = false
# Self-vendored packages on our primeintellect index
reverse-text = false
alphabet-sort = false
wiki-search = false
math-python = false
math-env = false
code-env = false
science-env = false
logic-env = false
color-codeword = false
math500 = false
aime2024 = false
aime2025 = false
deepdive = false
mini_swe_agent_plus = false
# PrimeIntellect-published on PyPI (trusted publisher)
prime = false
prime-sandboxes = false
prime-tunnel = false
prime-evals = false
# Trusted git/URL sources pinned by rev or wheel URL (defensive: belt-and-suspenders)
verifiers = false
renderers = false
vllm-router = false
dion = false
pydantic-config = false
deep-ep = false
deep-gemm = false
nixl-cu12 = false

[tool.uv.sources]
prime-rl-configs = { workspace = true }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
verifiers = { git = "https://github.com/joanvelja/verifiers.git", rev = "38ff43e3" }
renderers = { git = "https://github.com/joanvelja/renderers.git", rev = "cce74eb" }
torchtitan = { git = "https://github.com/pytorch/torchtitan", rev = "a1fdd7e" }
dion = { git = "https://github.com/samsja/dion.git", rev = "d891eeb" }
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "c1c3424" }
flash-attn-4 = { git = "https://github.com/Dao-AILab/flash-attention.git", subdirectory = "flash_attn/cute", rev = "96bd151" }
flash-attn = { git = "https://github.com/Dao-AILab/flash-attention.git", rev = "060c918" }
pydantic-config = { git = "https://github.com/samsja/pydantic_config.git", branch = "main" }
vllm-router = { url = "https://github.com/PrimeIntellect-ai/router/releases/download/v0.1.22/vllm_router-0.1.22-cp38-abi3-manylinux_2_28_x86_64.whl" }
vllm = [
    { url = "https://github.com/vllm-project/vllm/releases/download/v0.20.2/vllm-0.20.2-cp38-abi3-manylinux_2_35_x86_64.whl", marker = "platform_machine == 'x86_64'" },
    { url = "https://github.com/vllm-project/vllm/releases/download/v0.20.2/vllm-0.20.2-cp38-abi3-manylinux_2_35_aarch64.whl", marker = "platform_machine == 'aarch64'" },
]
reverse-text = { index = "primeintellect" }
alphabet-sort = { index = "primeintellect" }
wiki-search = { index = "primeintellect" }
math-python = { index = "primeintellect" }
math-env = { index = "primeintellect" }
code-env = { index = "primeintellect" }
science-env = { index = "primeintellect" }
logic-env = { index = "primeintellect" }
color-codeword = { index = "primeintellect" }
math500 = { index = "primeintellect" }
aime2024 = { index = "primeintellect" }
aime2025 = { index = "primeintellect" }
deepdive = { index = "primeintellect" }
mini_swe_agent_plus = { index = "primeintellect" }
deep-ep = { url = "https://github.com/PrimeIntellect-ai/prime-rl/releases/download/v0.5.0/deep_ep-1.2.1+29d31c0-cp312-cp312-linux_x86_64.whl" }
deep-gemm = { url = "https://github.com/PrimeIntellect-ai/prime-rl/releases/download/v0.5.0/deep_gemm-2.5.0+891d57b-cp312-cp312-linux_x86_64.whl" }
nixl-cu12 = { url = "https://github.com/PrimeIntellect-ai/prime-rl/releases/download/v0.5.0/nixl_cu12-0.10.1-cp312-cp312-linux_x86_64.whl" }
flash-linear-attention = { git = "https://github.com/fla-org/flash-linear-attention" }
flash_attn_3 = { index = "pytorch-cu130-test" }

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
flash-attn-3 = [{ requirement = "torch", match-runtime = true }]
mamba-ssm = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_FORCE_BUILD = "TRUE", MAX_JOBS = "32", NVCC_THREADS = "4" }

[[tool.uv.index]]
name = "primeintellect"
url = "https://hub.primeintellect.ai/primeintellect/simple/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu130-test"
url = "https://download.pytorch.org/whl/test/cu130"
explicit = true

[tool.ruff.lint]
select = ["F", "I"]
ignore = ["F722", "F821"] # Need to ignore for jaxtyping (https://docs.kidger.site/jaxtyping/faq/)

[tool.ruff.lint.isort]
# `prime_rl` is split across two workspace wheels (prime-rl + prime-rl-configs).
# Without this, ruff classifies prime_rl.configs.* as third-party because it
# doesn't live under src/.
known-first-party = ["prime_rl"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as gpu (deselect with '-m \"not gpu\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prime_rl"]

[tool.hatch.metadata]
allow-direct-references = true
