[project]
name = "prime-rl"
version = "0.5.0"
description = "Async RL Training at Scale"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "prime-rl-configs",
    "prime-pydantic-config",
    "beartype>=0.21.0",
    "datasets>=4.0.0",
    "jaxtyping>=0.3.2",
    "liger-kernel>=0.5.10",
    "loguru>=0.7.3",
    "pyarrow>=21.0.0",
    "numpy>=2.2.6",
    "orjson>=3.11.0",
    "torch==2.11.0",
    "torchvision",
    "torchaudio",
    "torchdata>=0.11.0",
    "transformers==5.6.2",
    "vllm>=0.22.0",
    "mooncake-transfer-engine==0.3.9 ; platform_machine == 'aarch64'",
    "mooncake-transfer-engine>=0.3.10.post2 ; platform_machine != 'aarch64'",
    "wandb>=0.26.1",
    "ring-flash-attn>=0.1.8",
    "prime>=0.6.4",
    "pyzmq>=27.1.0",
    "aiolimiter>=1.2.1",
    "tenacity>=8.2.0",
    "openai>=1.106.1",
    "orjson>=3.11.0",
    "rich>=14.0.0",
    "setproctitle>=1.3.0",
    "uvloop>=0.21.0",
    "torchtitan",
    "verifiers",
    "renderers",
    "dion",
    "tilelang>=0.1.8",
    "flash-linear-attention",
    "nvidia-ml-py>=12.575.51",
    "pybase64>=1.4.2",
]

[project.scripts]
rl = "prime_rl.entrypoints.rl:main"
sft = "prime_rl.entrypoints.sft:main"
inference = "prime_rl.entrypoints.inference:main"
trainer = "prime_rl.entrypoints.trainer:main"
orchestrator = "prime_rl.entrypoints.orchestrator:main"
env-server = "prime_rl.orchestrator.env_server.env_server:main"

[project.entry-points."vllm.general_plugins"]
prime_rl = "prime_rl.inference.patches:transformers_v5_compat"

[project.optional-dependencies]
flash-attn = [
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.4/flash_attn-2.8.3+cu128torch2.11-cp312-cp312-linux_x86_64.whl ; platform_machine == 'x86_64'",
    "flash-attn==2.8.3 ; sys_platform == 'linux' and platform_machine == 'aarch64'",
]
flash-attn-3 = ["flash_attn_3"]

flash-attn-cute = [
    "flash-attn-4",
]
envs = [
    "aime2024",
    "aime2025",
    "alphabet-sort",
    "code-env",
    "color-codeword",
    "deepdive",
    "general-agent",
    "gpqa",
    "gpqa-open-ended-debate",
    "hf-singleturn",
    "hle",
    "ifeval",
    "livecodebench",
    "logic-env",
    "math-env",
    "math-python",
    "math500",
    "mini-swe-agent-plus",
    "mmlu-pro",
    "opencode-cp",
    "opencode-deepdive",
    "opencode-math",
    "opencode-science",
    "opencode-swe",
    "reverse-text",
    "rlm-swe",
    "rlm-search",
    "rlm-uuid-ctf",
    "science-env",
    "simpleqa-verified",
    "tau2-bench",
    "wiki-search",
    "wordle",
]
disagg = [
    "deep-ep ; platform_machine == 'x86_64'",
    "deep-gemm ; platform_machine == 'x86_64'",
    "nixl",
    "nixl-cu12 ; platform_machine == 'x86_64'",
    "vllm-router ; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]
gpt-oss = [
    "kernels",
]
modelexpress = [
    "modelexpress==0.3.0",
]
quack = [
    "quack-kernels>=0.4.1",
]
all = [
    "prime-rl[flash-attn]",
    "prime-rl[disagg]",
    "prime-rl[quack]",
    "prime-rl[flash-attn-3]",
    "prime-rl[flash-attn-cute]",
]

[dependency-groups]
mamba-ssm = [
    "mamba-ssm>=2.3.0",
]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.12.1",
]

[tool.uv]
# Enforce a uv version that supports the friendly-duration form
# (`"7 days"`) in the static pyproject parser. Older uvs silently parse
# the value as an RFC 3339 date, emit a TOML parse warning, and proceed
# *without* the cooldown — bypassing this security policy.
required-version = ">=0.11.1"
exclude-newer = "7 days"
preview = true
no-build-isolation-package = ["flash-attn"]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
# Override torch's pinned cuDNN to fix Conv3d performance regression (torch 2.9 + cuDNN 9.8-9.14)
# See: https://github.com/pytorch/pytorch/issues/166122
override-dependencies = [
    "nvidia-cudnn-cu12>=9.15 ; platform_machine == 'x86_64'",
    "nvidia-cudnn-cu13>=9.15 ; platform_machine == 'aarch64'",
    "nvidia-cutlass-dsl>=4.4.1",
    # Adopt NCCL 2.30.7 over torch's hard pin (==2.28.9). torch dlopens its wheel's libnccl by
    # absolute path, so an LD_LIBRARY_PATH overlay is a no-op for torch (verified job 5441116) — the
    # wheel swap is the only path. NCCL 2.x is ABI-back-compatible (SONAME libnccl.so.2), so torch
    # built against 2.28 runs on 2.30.7. aarch64 only (x86 uses nccl-cu12). Validated: W1 (nccl-tests).
    "nvidia-nccl-cu13==2.30.7 ; platform_machine == 'aarch64'",
    "transformers==5.6.2",
    "torch==2.11.0",
    "openenv-core",
    # Upstream pins verifiers[packages]>=0.1.15.dev150 (the `packages` extra pulls
    # harnesses + tasksets). The workspace verifiers fork reports 0.1.6.dev (hatch-vcs
    # picks the tasksets-v0.1.5 tag), so that floor is unsatisfiable; trust the
    # workspace copy unconditionally. harnesses + tasksets are wired in below as
    # explicit editable [tool.uv.sources], so upstream's `packages` extra effect is
    # preserved without the unsatisfiable version bound.
    "verifiers",
]

# ModelExpress 0.3.0 publishes protobuf<6 metadata, but its generated proto is
# compatible with protobuf 6. prime-sandboxes requires protobuf>=6.31.1; keep
# this capped to the validated protobuf major.
[[tool.uv.dependency-metadata]]
name = "modelexpress"
version = "0.3.0"
requires-dist = [
    "grpcio>=1.66.2",
    "huggingface_hub>=0.20.0",
    "nixl[cu12]",
    "numpy>=1.24.0",
    "protobuf>=5.27.0,<7.0.0",
    "pydantic>=2.0.0",
    "torch>=2.6.0",
]

[tool.uv.exclude-newer-package]
# we want latest vllm, remove next patch
vllm = false
tokenspeed-mla = false
fastokens = false
flash_attn_3 = false
# PrimeIntellect-published packages in this project's dependency closure —
# fast-track so first-party releases can land same-day. Only packages that
# appear in `uv tree` need to be listed; the resolver ignores entries for
# packages it never sees.
prime = false
prime-sandboxes = false
prime-tunnel = false
prime-evals = false
verifiers = false
renderers = false
tasksets = false
harnesses = false
prime-pydantic-config = false
# Trusted git/URL sources pinned by rev or wheel URL (defensive: belt-and-suspenders)
vllm-router = false
dion = false
deep-ep = false
deep-gemm = false
nixl-cu12 = false
cuda-bindings = false
cuda-toolkit = false
nvidia-cublas = false
nvidia-cuda-cupti = false
nvidia-cuda-nvrtc = false
nvidia-cuda-runtime = false
nvidia-cudnn-cu13 = false
nvidia-cufft = false
nvidia-cufile = false
nvidia-curand = false
nvidia-cusolver = false
nvidia-cusparse = false
nvidia-cusparselt-cu13 = false
nvidia-nccl-cu13 = false
nvidia-nvjitlink = false
nvidia-nvshmem-cu13 = false
nvidia-nvtx = false

[tool.uv.sources]
prime-rl-configs = { path = "packages/prime-rl-configs", editable = true }
verifiers = { path = "deps/verifiers", editable = true }
renderers = { path = "deps/renderers", editable = true }
prime-pydantic-config = { path = "deps/pydantic-config", editable = true }
aime2024 = { path = "deps/research-environments/environments/aime2024", editable = true }
aime2025 = { path = "deps/research-environments/environments/aime2025", editable = true }
alphabet-sort = { path = "deps/verifiers/environments/alphabet_sort", editable = true }
code-env = { path = "deps/research-environments/environments/code_env", editable = true }
color-codeword = { path = "deps/research-environments/environments/color_codeword", editable = true }
deepdive = { path = "deps/research-environments/environments/deepdive", editable = true }
general-agent = { path = "deps/research-environments/environments/general_agent", editable = true }
gpqa = { path = "deps/research-environments/environments/gpqa", editable = true }
gpqa-open-ended-debate = { path = "deps/verifiers/environments/gpqa_open_ended_debate", editable = true }
harnesses = { path = "deps/verifiers/packages/harnesses", editable = true }
hf-singleturn = { path = "deps/verifiers/environments/hf_singleturn", editable = true }
hle = { path = "deps/research-environments/environments/hle", editable = true }
ifeval = { path = "deps/research-environments/environments/ifeval", editable = true }
livecodebench = { path = "deps/research-environments/environments/livecodebench", editable = true }
logic-env = { path = "deps/research-environments/environments/logic_env", editable = true }
math-env = { path = "deps/research-environments/environments/math_env", editable = true }
math-python = { path = "deps/verifiers/environments/math_python", editable = true }
math500 = { path = "deps/research-environments/environments/math500", editable = true }
mini-swe-agent-plus = { path = "deps/research-environments/environments/mini_swe_agent_plus", editable = true }
mmlu-pro = { path = "deps/research-environments/environments/mmlu_pro", editable = true }
opencode-cp = { path = "deps/research-environments/environments/opencode_cp", editable = true }
opencode-deepdive = { path = "deps/research-environments/environments/opencode_deepdive", editable = true }
opencode-math = { path = "deps/research-environments/environments/opencode_math", editable = true }
opencode-science = { path = "deps/research-environments/environments/opencode_science", editable = true }
opencode-swe = { path = "deps/research-environments/environments/opencode_swe", editable = true }
reverse-text = { path = "deps/verifiers/environments/reverse_text", editable = true }
rlm-swe = { path = "deps/research-environments/environments/rlm_swe", editable = true }
rlm-search = { path = "deps/research-environments/environments/rlm_search", editable = true }
rlm-uuid-ctf = { path = "deps/research-environments/environments/rlm_uuid_ctf", editable = true }
science-env = { path = "deps/research-environments/environments/science_env", editable = true }
simpleqa-verified = { path = "deps/research-environments/environments/simpleqa_verified", editable = true }
tau2-bench = { path = "deps/research-environments/environments/tau2_bench", editable = true }
tasksets = { path = "deps/verifiers/packages/tasksets", editable = true }
wiki-search = { path = "deps/verifiers/environments/wiki_search", editable = true }
wordle = { path = "deps/verifiers/environments/wordle", editable = true }
torch = [
    { index = "pytorch-cu128", marker = "platform_machine == 'x86_64'" },
    { index = "pytorch-cu130", marker = "platform_machine == 'aarch64'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "platform_machine == 'x86_64'" },
    { index = "pytorch-cu130", marker = "platform_machine == 'aarch64'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "platform_machine == 'x86_64'" },
    { index = "pytorch-cu130", marker = "platform_machine == 'aarch64'" },
]
torchtitan = { git = "https://github.com/pytorch/torchtitan", rev = "a1fdd7e" }
dion = { git = "https://github.com/samsja/dion.git", rev = "d891eeb" }
flash-attn-4 = { git = "https://github.com/Dao-AILab/flash-attention.git", subdirectory = "flash_attn/cute", rev = "96bd151" }
vllm-router = [
    { url = "https://github.com/PrimeIntellect-ai/router/releases/download/v0.1.26/vllm_router-0.1.26-cp38-abi3-manylinux_2_28_x86_64.whl", marker = "platform_machine == 'x86_64'" },
    { url = "https://github.com/PrimeIntellect-ai/router/releases/download/v0.1.26/vllm_router-0.1.26-cp38-abi3-manylinux_2_28_aarch64.whl", marker = "platform_machine == 'aarch64'" },
]
vllm = [
    { url = "https://github.com/vllm-project/vllm/releases/download/v0.22.0/vllm-0.22.0+cu129-cp38-abi3-manylinux_2_28_x86_64.whl", marker = "platform_machine == 'x86_64'" },
    { url = "https://github.com/vllm-project/vllm/releases/download/v0.22.0/vllm-0.22.0-cp38-abi3-manylinux_2_28_aarch64.whl", marker = "platform_machine == 'aarch64'" },
]
deep-ep = { url = "https://github.com/PrimeIntellect-ai/prime-rl/releases/download/v0.5.0/deep_ep-1.2.1+29d31c0-cp312-cp312-linux_x86_64.whl" }
deep-gemm = { url = "https://github.com/PrimeIntellect-ai/prime-rl/releases/download/v0.5.0/deep_gemm-2.5.0+891d57b-cp312-cp312-linux_x86_64.whl" }
nixl-cu12 = { url = "https://github.com/PrimeIntellect-ai/prime-rl/releases/download/v0.5.0/nixl_cu12-0.10.1-cp312-cp312-linux_x86_64.whl" }
flash-linear-attention = { git = "https://github.com/fla-org/flash-linear-attention" }
flash_attn_3 = [
    { index = "pytorch-cu128-test", marker = "platform_machine == 'x86_64'" },
    { index = "pytorch-cu130-test", marker = "platform_machine == 'aarch64'" },
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
flash-attn-3 = [{ requirement = "torch", match-runtime = true }]
mamba-ssm = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_FORCE_BUILD = "TRUE", FLASH_ATTENTION_SKIP_CUDA_BUILD = "FALSE" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128-test"
url = "https://download.pytorch.org/whl/test/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130-test"
url = "https://download.pytorch.org/whl/test/cu130"
explicit = true

[tool.ruff.lint]
select = ["F", "I"]
ignore = ["F722", "F821"] # Need to ignore for jaxtyping (https://docs.kidger.site/jaxtyping/faq/)

[tool.ruff.lint.isort]
# `prime_rl` is split across two editable wheels (prime-rl + prime-rl-configs).
# Without this, ruff classifies prime_rl.configs.* as third-party because it
# doesn't live under src/.
known-first-party = ["prime_rl"]

[tool.ruff]
line-length = 120
extend-exclude = ["deps"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as gpu (deselect with '-m \"not gpu\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prime_rl"]

[tool.hatch.metadata]
allow-direct-references = true
